1，处理Gradle原因App编译不通过的问题。 2，改类名，实现添加的MainActivity跳转原来的Text2Img和跳转Shh2Img。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.TActivity">
+        <activity android:name=".main.ShhActivity">
         </activity>
-        <activity android:name=".main.FirstActivity">
+        <activity android:name=".main.Text2ImgActivity">
         </activity>
 
         <meta-data
